--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-h1 {
-    color: red;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255)
+    background-color: beige
+}
+
+ h2, h3, h4 {font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    background-color: peru;
+
 }
