--- a/style.css
+++ b/style.css
@@ -1,11 +1,39 @@
 body {
+   
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(255, 255, 255)
-    background-color: beige
+    background-image: url("portland.jpg");
+     background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+h4 {font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: tan;
+    width: 500px;
+    padding: 5px;
+    border-radius: 5px 100% 5px 5px;
 }
 
- h2, h3, h4 {font-family: Arial, Helvetica, sans-serif;
-    color: black;
-    background-color: peru;
-
+.title {
+    color: white;
+    text-align: center;
+    font-size: 100px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin: 50px 600px 0px 30px;
 }
+
+h1 {
+    margin: 10px 400px 0px 20px;
+    color: tan;
+}
+
+div {
+    margin: 0px auto 10px auto;
+    border-radius: 5% 40% 5% 5%;
+    padding: 2%;
+    height: 80%;
+    width: 80%;
+    background-color: white; 
+    opacity: 0.97;
+    
+}
+
